force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailClickLikelihood__c.field-meta.xml
<CustomField>
    <fullName>EmailClickLikelihood__c</fullName>
    <label>Email Click Likelihood</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailClickLikelihood</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>