force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailClickScore__c.field-meta.xml
<CustomField>
    <fullName>EmailClickScore__c</fullName>
    <label>Email Click Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailClickScore</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>