force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailConversionLikelihood__c.field-meta.xml
<CustomField>
    <fullName>EmailConversionLikelihood__c</fullName>
    <label>Email Conversion Likelihood</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailConversionLikelihood</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>