force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailConversionScore__c.field-meta.xml
<CustomField>
    <fullName>EmailConversionScore__c</fullName>
    <label>Email Conversion Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailConversionScore</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>