force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailEngagementPersona__c.field-meta.xml
<CustomField>
    <fullName>EmailEngagementPersona__c</fullName>
    <label>Email Engagement Persona</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailEngagementPersona</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>