force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailOpenLikelihood__c.field-meta.xml
<CustomField>
    <fullName>EmailOpenLikelihood__c</fullName>
    <label>Email Open Likelihood</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailOpenLikelihood</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>