force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailOpenScore__c.field-meta.xml
<CustomField>
    <fullName>EmailOpenScore__c</fullName>
    <label>Email Open Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailOpenScore</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>