force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/EmailSubscribeLikelihood__c.field-meta.xml
<CustomField>
    <fullName>EmailSubscribeLikelihood__c</fullName>
    <label>Email Subscribe Likelihood</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailSubscribeLikelihood</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>