force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/InternalOrganizationId__c.field-meta.xml
<CustomField>
    <fullName>InternalOrganizationId__c</fullName>
    <label>Internal Organization</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>