force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/KQ_SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>KQ_SubscriberKey__c</fullName>
    <label>Key Qualifier Subscriber Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_SubscriberKey</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>