force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/rel_1710739525582_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1710739525582_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EinsteinEmailEngagementScores_Subscr_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>EinsteinEmailEngagementScores_Subscr_rel</relationshipLabel>
    <relationshipName>rel_1710739525582_end</relationshipName>
    <type>Lookup</type>
</CustomField>