force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>SubscriberKey__c</fullName>
    <label>Subscriber Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriberKey</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>