force-app/main/default/objects/EinsteinEmailEngagementScores__dlm/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <label>Updated Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UpdatedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>